clientVerseGit/force-app/main/default/objects/Notification_Request__c/Notification_Request__c.object-meta.xml
<CustomObject>
    <label>Notification Request</label>
    <nameField>
        <displayFormat>NR-{00000}</displayFormat>
        <label>Notification Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>