clientVerseGit/force-app/main/default/objects/Notification_Request__c/fields/Context_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Context_Record_Id__c</fullName>
    <label>Context Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>