clientVerseGit/force-app/main/default/objects/Notification_Request__c/fields/Recipient_Id__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Id__c</fullName>
    <label>Recipient Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>