clientVerseGit/force-app/main/default/objects/Notification_Request__c/fields/Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Type__c</fullName>
    <label>Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
                <isActive>false</isActive>
                <label>Queue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>