clientVerseGit/force-app/main/default/objects/Notification_Request__c/fields/Template_Mappings__c.field-meta.xml
<CustomField>
    <fullName>Template_Mappings__c</fullName>
    <label>Template Mappings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>